# 1C-forecast-app

./: README.md  ecs-fargate-app.yaml  pyproject.toml
app/: Dockerfile  app.py  requirements.txt
scripts/: generate_validation_preds.py  setup_rds.py  setup_rds_catalogs.py  setup_rds_sales.py
src/training/: train.py
